TJM | CSS adjustment to ensure new images aren't stretch on iPhone

--- a/TouchApp/css/mobile.css
+++ b/TouchApp/css/mobile.css
@@ -106,6 +106,8 @@ font-weight: normal;
 img { 
     max-width: 267px;
     border: 1px #e0e0e0 solid;
+    width: auto;
+    height: auto;
 }
 
 div {
